# PHiLiP

./: .codedocs  .gitignore  .gitmodules  .travis.yml  BoundaryValues.h  CMakeLists.txt  CONTRIBUTE.md  DEBUG.md  EulerFlow.cpp  EulerFlow.h  INSTALL.md  LICENSE  PERFORMANCE.md  README.md  TODO  beluga_compile_PHiLiP.sh  clean.sh  clean_vtk.sh  cmakedocs.cmake  compile_PHiLiP_new.sh  configure_git_submodules_cluster.sh  create_job_parameters_file.sh  generate_job_parameters_file_PHiLiP.sh  get_NACA0012_mesh_files_cluster.sh  get_NACA0012_mesh_files_local.sh  get_flow_initialization_files_Rorqual.sh  get_flow_initialization_files_cluster.sh  get_flow_initialization_files_local.sh  get_gmsh_mesh_files_Rorqual.sh  get_gmsh_mesh_files_cluster.sh  get_gmsh_mesh_files_local.sh  get_large_test_files.sh  input_file.prm  job_compile_PHiLiP.sh  job_compile_PHiLiP_JB_edit.sh  job_compile_PHiLiP_Rorqual.sh  job_compile_PHiLiP_interactive.sh  job_parameters_file_PHiLiP.sh  job_parameters_file_PHiLiP_Rorqual.sh  launch_scaling.sh  (+6 more)
doc/: CMakeLists.txt  CodePlanification.odg  doxygen.cfg.in  doxygen_codedocs.cfg  getting_started.dox  install_dealii.sh  install_ubuntu2004_VM.sh  mainpage.dox  prep_dealii_beluga.sh  prep_trilinos.sh  replace_variable_name.sh  trilinos_prep_beluga.sh
src/: ;  ADTypes.hpp  CMakeLists.txt  EulerFlow.cpp  Session.vim  advection.cpp  advection.h  advection_boundary.cpp  advection_boundary.h  advection_explicit.cpp  advection_explicit.h  assemble_explicit.cpp  assemble_implicit.cpp  codi_DirectionVar.hpp  dg.cpp  dg.h  fefield_manifold.cpp  global_counter.hpp  grid_study.cpp  grid_study.h  integral_hypercube.m  integrator.h  linear_solver.cpp  linear_solver.h  main.cpp  manufactured_advection.cpp  manufactured_advection.h  manufactured_convection_diffusion.cpp  manufactured_convection_diffusion.h  manufactured_solution.cpp  manufactured_solution.h  ode_solver.cpp  ode_solver.h  oops_I_compiled_with_too_many_cores_and_ran_out_of_RAM.sh  parameters.cpp  parameters.h  physics.cpp  physics.h  temporary_test.cpp  test.cpp  (+1 more)
src/combustion/: CMakeLists.txt  NonEquilibriumVar.cpp  ReactiveVar.cpp  ReactiveVar.h  all_real_gas_constants.cpp  all_real_gas_constants.h  readspecies.cpp  readspecies.h
src/deprecated/: advection_explicit.cpp  advection_explicit.h  assemble_explicit.cpp  boundary.h  deprecated_residual.cpp  diffusion.cpp  flowsolver.h  input.h  linear_advection.cpp  manufactured_solution.cpp  manufactured_solution.h  mesh.h  ode_solver.cpp  ode_solver.h  ode_solver_deprecated.cpp  operators.h  spatial.cpp  step-33.cpp
src/dg/: CMakeLists.txt  artificial_dissipation.cpp  artificial_dissipation.h  artificial_dissipation_factory.cpp  artificial_dissipation_factory.h  assemble_implicit.cpp  bound_preserving_limiter.cpp  bound_preserving_limiter.h  dg.cpp  dg.h  dg_base.cpp  dg_base.h  dg_base.hpp  dg_base_state.cpp  dg_base_state.hpp  dg_beluga.cpp  dg_factory.cpp  dg_factory.hpp  dg_helper_functions.hpp  dg_old.cpp  drdx.cpp  high_order_grid.cpp  high_order_grid.h  meshmover_linear_elasticity.cpp  meshmover_linear_elasticity.hpp  residual_sparsity_patterns.cpp  strong_dg.cpp  strong_dg.hpp  strong_dg_Nov11.cpp  strong_dg_les.cpp  strong_dg_les.hpp  strong_dg_nov15.cpp  strong_explicit_dg.cpp  weak_dg.cpp  weak_dg.hpp
src/dummy/: CMakeLists.txt  README.md  codipack_vector_rad_fad.cpp  codipack_vector_rad_fad_2.cpp  codipack_vector_rad_fad_3.cpp  dfad_dfad_example.cpp  dfad_example.cpp  instantiate_vector_ad.cpp  integral_hypercube.m  jacobian_via_dfad_example.cpp  quasi-static.cpp  template_instantiator.h  temporary_test.cpp  test_manifold.cpp  trad_dfad_example.cpp  trad_dfad_example_2.cpp  trad_dfad_example_3.cpp  trad_example.cpp
src/flow_solver/: CMakeLists.txt  flow_solver.cpp  flow_solver.h  flow_solver_channel_flow.cpp  flow_solver_channel_flow.h  flow_solver_factory.cpp  flow_solver_factory.h
src/functional/: CMakeLists.txt  acoustic_adjoint.cpp  acoustic_adjoint.hpp  adjoint.cpp  adjoint.h  amiet_model.cpp  amiet_model.hpp  cell_distortion_functional.cpp  cell_distortion_functional.h  dual_weighted_residual_obj_func1.cpp  dual_weighted_residual_obj_func1.h  dual_weighted_residual_obj_func2.cpp  dual_weighted_residual_obj_func2.h  extraction_functional.cpp  extraction_functional.hpp  functional.cpp  functional.h  geometric_volume.hpp  implicit_shocktracking_functional.cpp  implicit_shocktracking_functional.h  lift_drag.cpp  lift_drag.hpp  mesh_jacobian_deviation_functional.cpp  mesh_jacobian_deviation_functional.h  mesh_vertex_deviation_functional.cpp  mesh_vertex_deviation_functional.h  moment.hpp  target_boundary_functional.cpp  target_boundary_functional.h  target_functional.cpp  target_functional.h  target_value_functional.hpp  target_wall_pressure.cpp  target_wall_pressure.hpp
src/grid/: CMakeLists.txt
src/grid_refinement/: CMakeLists.txt  field.cpp  field.h  gmsh_out.cpp  gmsh_out.h  gnu_out.cpp  gnu_out.h  grid_refinement.cpp  grid_refinement.h  grid_refinement_continuous.cpp  grid_refinement_continuous.h  grid_refinement_fixed_fraction.cpp  grid_refinement_fixed_fraction.h  grid_refinement_uniform.cpp  grid_refinement_uniform.h  msh_out.cpp  msh_out.h  reconstruct_poly.cpp  reconstruct_poly.h  size_field.cpp  size_field.h
src/hyper_reduction/: CMakeLists.txt  assemble_ECSW_jacobian.cpp  assemble_ECSW_jacobian.h  assemble_problem_ECSW.cpp  assemble_problem_ECSW.h  hyper_reduced_adaptive_sampling.cpp  hyper_reduced_adaptive_sampling.h
src/limiter/: CMakeLists.txt  bound_preserving_limiter.cpp  bound_preserving_limiter.h  bound_preserving_limiter_factory.cpp  bound_preserving_limiter_factory.hpp  maximum_principle_limiter.cpp  maximum_principle_limiter.h  positivity_preserving_limiter.cpp  positivity_preserving_limiter.h  tvb_limiter.cpp  tvb_limiter.h
src/linear_solver/: CMakeLists.txt  NNLS_solver.cpp  NNLS_solver.h  helper_functions.cpp  helper_functions.h  linear_solver.cpp  linear_solver.h
src/mesh/: CMakeLists.txt  dual_weighted_residual.cpp  dual_weighted_residual.h  (+20 more)
tests/: CMakeLists.txt  CTEST_LABELS.md  gaussian_bump.cpp
(+1699 files in other folders)
